# car-info-ai-project

./: README.md  main.py  pyproject.toml
car_ai_project/cars_dataset/: main.py
src/data/: clean_data.py
